--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "numpy>=1.24",
     "fastembed>=0.7.0",
     "sqlite-vec>=0.1.6",
+    "croniter>=2.0",
 ]
 
 [project.optional-dependencies]
